# vega-agent

./: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py  memory.py  ollama.py  schemas.py
docs/: architecture.md  learning-path.md  memory-model-research.md  project-plan.md  research.md  roadmap.md  verification.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.jsx  styles.css
